<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menuSettingsActivityMain"
        android:orderInCategory="3"
        android:icon="@drawable/ic_settings_black_24dp"
        android:onClick="onClickMenuItemActivityMain"
        android:title="@string/menu_item_settings_activity_main"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuColorActivityMain"
        android:orderInCategory="5"
        android:onClick="onClickMenuItemActivityMain"
        app:showAsAction="never"
        android:title="@string/menu_item_color_activity_main"/>

    <item
        android:title="@string/menu_item_about_activity_main"
        app:showAsAction="never"
        android:onClick="onClickMenuItemActivityMain"
        android:orderInCategory="2"
        android:checkable="true"
        android:id="@+id/menuAboutActivityMain"/>

    <group
        android:checkableBehavior="single">
        <item
            android:title="@string/menu_item_alina_activity_main"
            app:showAsAction="never"
            android:onClick="onClickMenuItemActivityMain"
            android:orderInCategory="1"
            android:id="@+id/menuAlinaActivityMain"/>
        <item
            android:id="@+id/menu_item_search_activity_main"
            android:onClick="onClickMenuItemActivityMain"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_item_search_activity_main"
            android:orderInCategory="4"
            app:actionViewClass="android.widget.SearchView" />
    </group>
</menu>